# vwisper

./: ReadMe.md  index.html  package.json  vite.config.ts
src/: Index.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  fn_key_monitor.c  key_monitor.rs  lib.rs  main.rs  shortcuts.rs  stt.rs  text_injector.rs  transcription_history.rs  tray.rs  updater.rs  window_setup.rs  window_state.rs
src/components/: app-sidebar.tsx  chart-area-interactive.tsx  dashboard-layout.tsx  data-table.tsx  section-cards.tsx  site-header.tsx  theme-provider.tsx  update-card.tsx  voice-input.tsx
src/components/ui/: dialog.tsx  sidebar.tsx
src/home/: Home.tsx
src/hooks/: use-speech-to-text.ts  use-update-checker.ts
src/lib/: history-context.tsx  update-context.tsx  version.ts
src/pages/help/: Help.tsx
src/pages/home/: Home.tsx
src/pages/quick-start/: QuickStart.tsx
src/pages/settings/: Settings.tsx
src/pages/shortcuts/: Shortcuts.tsx
src/pages/transcription-history/: TranscriptionHistory.tsx
src/shortcuts/: Shortcuts.tsx
src/voice/: Voice.tsx
