[package]
name = "vwisper"
version = "0.0.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vwisper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vwisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
device_query = "1.1"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
rodio = "0.19"
arboard = "3.6.1"
lazy_static = "1.5.0"
tauri-plugin-single-instance = "2.3.6"
tokio = { version = "1", features = ["rt", "time"] }
ureq = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

